--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omok-client",
+  "name": "grayscale-omok-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,13 +17,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
